# Air-Defence-System-Project

./: AGENTS.md  LICENSE  README.md  README_AI.md  README_UI.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/assets/ai/: results.csv  results.xlsx
examples/: task_command_demo.py
tests/: test_config.py  test_qr_decoder.py  test_safety.py  test_shape_detector.py  test_target_distance.py  test_tracker.py
